k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scm
  labels:
    app.kubernetes.io/part-of: pharmachain
